--- a/spdx.info.yml
+++ b/spdx.info.yml
@@ -3,5 +3,6 @@ type: module
 description: A license management module.
 core: 8.x
 package: Joinup
+php: 7.1
 dependencies:
   - rdf_entity:rdf_entity
