ISAICP-5130: Use the client from the connection class.

--- a/drush.services.yml
+++ b/drush.services.yml
@@ -1,5 +1,6 @@
 services:
   spdx.commands:
     class: \Drupal\spdx\Commands\SpdxCommands
+    arguments: ['@sparql_endpoint']
     tags:
       - { name: drush.command }
