--- a/spdx.info.yml
+++ b/spdx.info.yml
@@ -1,6 +1,6 @@
 name: SPDX Licenses
 type: module
-description: A license management module.
+description: 'A license management module.'
 core: 8.x
 package: Joinup
 php: 7.1
