--- a/config/install/field.field.rdf_entity.spdx_licence.field_spdx_licence_text.yml
+++ b/config/install/field.field.rdf_entity.spdx_licence.field_spdx_licence_text.yml
@@ -5,17 +5,8 @@ dependencies:
     - field.storage.rdf_entity.field_spdx_licence_text
     - rdf_entity.rdfentity.spdx_licence
   module:
-    - allowed_formats
     - text
-third_party_settings:
-  allowed_formats:
-    content_editor: content_editor
-    basic_html: '0'
-    restricted_html: '0'
-    simple_html: '0'
-    simple_text: '0'
-    full_html: '0'
-    plain_text: '0'
+third_party_settings: {  }
 id: rdf_entity.spdx_licence.field_spdx_licence_text
 field_name: field_spdx_licence_text
 entity_type: rdf_entity
