Fix the config objects.

--- a/config/install/sparql_entity_storage.mapping.rdf_entity.spdx_licence.yml
+++ b/config/install/sparql_entity_storage.mapping.rdf_entity.spdx_licence.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - rdf_entity.graph.default
+    - sparql_entity_storage.graph.default
     - rdf_entity.rdfentity.spdx_licence
 id: rdf_entity.spdx_licence
 entity_type_id: rdf_entity
