--- a/config/install/field.storage.rdf_entity.field_spdx_see_also.yml
+++ b/config/install/field.storage.rdf_entity.field_spdx_see_also.yml
@@ -5,7 +5,7 @@ dependencies:
     - link
     - rdf_entity
 third_party_settings:
-  rdf_entity:
+  sparql_entity_storage:
     mapping:
       uri:
         predicate: 'http://spdx.org/rdf/terms#seeAlso'
