--- a/spdx.info.yml
+++ b/spdx.info.yml
@@ -3,8 +3,7 @@ type: module
 description: 'A license management module.'
 package: Joinup
 
-core: 8.x
-php: 7.1
+core_version_requirement: ^8 || ^9
 
 dependencies:
   - drupal:link
