--- a/config/install/field.storage.rdf_entity.field_spdx_licence_id.yml
+++ b/config/install/field.storage.rdf_entity.field_spdx_licence_id.yml
@@ -6,9 +6,11 @@ dependencies:
 third_party_settings:
   sparql_entity_storage:
     mapping:
-      value:
-        predicate: 'http://spdx.org/rdf/terms#licenseId'
-        format: 'xsd:string'
+      field: null
+      columns:
+        value:
+          predicate: 'http://spdx.org/rdf/terms#licenseId'
+          format: 'xsd:string'
 id: rdf_entity.field_spdx_licence_id
 field_name: field_spdx_licence_id
 entity_type: rdf_entity
