--- a/config/install/field.storage.rdf_entity.field_spdx_licence_text.yml
+++ b/config/install/field.storage.rdf_entity.field_spdx_licence_text.yml
@@ -7,12 +7,11 @@ dependencies:
 third_party_settings:
   sparql_entity_storage:
     mapping:
-      value:
-        predicate: 'http://spdx.org/rdf/terms#licenseText'
-        format: t_literal
-      format:
-        predicate: ''
-        format: no_format
+      field: null
+      columns:
+        value:
+          predicate: 'http://spdx.org/rdf/terms#licenseText'
+          format: t_literal
 id: rdf_entity.field_spdx_licence_text
 field_name: field_spdx_licence_text
 entity_type: rdf_entity
