--- a/config/install/field.storage.rdf_entity.field_spdx_see_also.yml
+++ b/config/install/field.storage.rdf_entity.field_spdx_see_also.yml
@@ -7,15 +7,11 @@ dependencies:
 third_party_settings:
   sparql_entity_storage:
     mapping:
-      uri:
-        predicate: 'http://spdx.org/rdf/terms#seeAlso'
-        format: 'xsd:anyURI'
-      title:
-        predicate: ''
-        format: no_format
-      options:
-        predicate: ''
-        format: no_format
+      field: null
+      columns:
+        uri:
+          predicate: 'http://spdx.org/rdf/terms#seeAlso'
+          format: 'xsd:anyURI'
 id: rdf_entity.field_spdx_see_also
 field_name: field_spdx_see_also
 entity_type: rdf_entity
