--- a/config/install/sparql_entity_storage.mapping.rdf_entity.spdx_licence.yml
+++ b/config/install/sparql_entity_storage.mapping.rdf_entity.spdx_licence.yml
@@ -12,11 +12,15 @@ graph:
   default: 'http://joinup.eu/spdx_licence/published'
 base_fields_mapping:
   rid:
-    target_id:
-      predicate: 'http://www.w3.org/1999/02/22-rdf-syntax-ns#type'
-      format: resource
+    field: null
+    columns:
+      target_id:
+        predicate: 'http://www.w3.org/1999/02/22-rdf-syntax-ns#type'
+        format: resource
   label:
-    value:
-      predicate: 'http://spdx.org/rdf/terms#name'
-      format: t_literal
+    field: null
+    columns:
+      value:
+        predicate: 'http://spdx.org/rdf/terms#name'
+        format: t_literal
 entity_id_plugin: default
