--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/spdx",
+    "name": "ec-europa/spdx",
     "description": "Allows to federate and manage the SPDX licences.",
     "type": "drupal-module",
     "require": {
