Support rdf_entity 2.x.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "drupal-module",
     "require": {
         "php": ">=7.1",
-        "drupal/rdf_entity": "^1.0",
+        "drupal/rdf_entity": "^1.0 || ^2.0",
         "spdx/license-list-data": "master"
     },
     "repositories": [
